--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-	ext { springBootVersion = '1.3.0.RELEASE' }
+	ext { springBootVersion = '1.3.2.RELEASE' }
 	repositories { 
 	   jcenter()
        mavenCentral()
@@ -60,7 +60,7 @@ dependencies {
     
     
     compile 'org.springframework.hateoas:spring-hateoas'
-    compile 'org.springframework.data:spring-data-commons'
+    compile("org.springframework.boot:spring-boot-starter-data-jpa")
 	compile("org.eclipse.jdt:org.eclipse.jdt.annotation:2.0.0")
 	compile('com.google.guava:guava:18.0')
 	
@@ -85,6 +85,10 @@ dependencies {
 	
 	// so we can generate self signed certs
 	testCompile 'org.bouncycastle:bcpkix-jdk15on:1.53'
+	
+	//compile('org.flywaydb:flyway-core')
+	testCompile("com.h2database:h2:1.4.188")
+	
 	
 }
 
