--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,13 @@
+ext{
+    if(!rootProject.hasProperty('ossrhUsername')) {
+        ossrhUsername = "none"
+    }
+
+    if(!rootProject.hasProperty('ossrhPassword')) {
+        ossrhPassword = "none"
+    }
+}
+
 buildscript {
 	ext { springBootVersion = '1.3.2.RELEASE' }
 	repositories { 
