--- a/src/test/resources/config/application.yml
+++ b/src/test/resources/config/application.yml
@@ -40,7 +40,7 @@ spring.jpa.properties.hibernate.show_sql: true
 spring.jpa.properties.hibernate.format_sql: true
 
 #DATASOURCE
-spring.datasource.url: jdbc:h2:mem:hyperstateTest;DB_CLOSE_ON_EXIT=TRUE
+spring.datasource.url: jdbc:h2:mem:hyperstateTest;DB_CLOSE_ON_EXIT=FALSE
 
 #flyway.enabled=true
 #flyway.schemas: HYPERSTATETEST
