--- a/build.gradle
+++ b/build.gradle
@@ -1,29 +1,35 @@
 buildscript {
-	ext { springBootVersion = '1.3.2.RELEASE' }
-	repositories { 
-	   jcenter()
-       mavenCentral()
-       maven { url "https://repo.spring.io/milestone" }
-       maven { url "https://repo.spring.io/snapshot" }
-	}
-	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}") 
-		classpath 'com.github.ben-manes:gradle-versions-plugin:0.11.3'
-	}
+    ext { springBootVersion = '1.3.2.RELEASE' }
+    repositories {
+        jcenter()
+        mavenCentral()
+        maven { url "https://repo.spring.io/milestone" }
+        maven { url "https://repo.spring.io/snapshot" }
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+        classpath 'com.github.ben-manes:gradle-versions-plugin:0.11.3'
+    }
 }
 
-plugins {
-    id "io.spring.dependency-management" version "0.5.4.RELEASE"
-}
+plugins { id "io.spring.dependency-management" version "0.5.4.RELEASE" }
 
 ext{
-    if(!rootProject.hasProperty('ossrhUsername')) {
-        ossrhUsername = "none"
-    }
+    ossrhUsername = hasProperty('ossrhUsername') ? ossrhUsername : System.getenv('OSSRH_JIRA_USERNAME')
+    ossrhPassword = hasProperty('ossrhPassword') ? ossrhPassword : System.getenv('OSSRH_JIRA_PASSWORD')
+    signing.keyId = hasProperty('signing.keyId') ? signing.keyId : System.getenv('GPG_KEY_ID')
+    signing.password = hasProperty('signing.password') ? signing.keyId : System.getenv('GPG_PASSPHRASE')
+    
 
-    if(!rootProject.hasProperty('ossrhPassword')) {
-        ossrhPassword = "none"
-    }
+    // TODO: Increase these, but needs to be set per subproject
+    limits = [
+        'instruction': 0,
+        'branch'     : 0,
+        'line'       : 0,
+        'complexity' : 0,
+        'method'     : 0,
+        'class'      : 0
+    ]
 }
 
 
@@ -37,6 +43,10 @@ apply plugin: 'announce'
 apply plugin: 'com.github.ben-manes.versions'
 apply plugin: 'maven'
 apply plugin: 'signing'
+apply plugin: 'jacoco'
+//apply plugin: 'findbugs'
+//apply plugin: 'pmd'
+//apply plugin: 'jdepend'
 
 
 group = "au.com.mountain-pass"
@@ -47,7 +57,7 @@ compileJava.options.compilerArgs.add '-parameters'
 compileTestJava.options.compilerArgs.add '-parameters'
 
 dependencyManagement {
-	//imports { mavenBom 'org.springframework.cloud:spring-cloud-starter-parent:1.0.0.RELEASE' }
+    //imports { mavenBom 'org.springframework.cloud:spring-cloud-starter-parent:1.0.0.RELEASE' }
 }
 
 jar { baseName = 'hyperstate' }
@@ -55,81 +65,79 @@ jar { baseName = 'hyperstate' }
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
-repositories { 
+repositories {
     jcenter()
     mavenCentral()
     maven { url "https://repo.spring.io/milestone" }
     maven { url "https://repo.spring.io/snapshot" }
-    
+
 }
 
 
-configurations {
-    providedRuntime
-}
+configurations { providedRuntime }
 
 dependencies {
-	compile("org.springframework.boot:spring-boot-starter-web")
-	compile("org.springframework.boot:spring-boot-starter-actuator")
+    compile("org.springframework.boot:spring-boot-starter-web")
+    compile("org.springframework.boot:spring-boot-starter-actuator")
     compile("org.springframework.boot:spring-boot-starter-aop")
     compile("org.springframework:spring-aop")
     compile("org.aspectj:aspectjweaver")
-    
-    
+
+
     compile 'org.springframework.hateoas:spring-hateoas'
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
-	compile("org.eclipse.jdt:org.eclipse.jdt.annotation:2.0.0")
-	compile('com.google.guava:guava:18.0')
-	
-	compile("com.fasterxml.jackson.core:jackson-core")
-	compile('com.fasterxml.jackson.core:jackson-annotations')
+    compile("org.eclipse.jdt:org.eclipse.jdt.annotation:2.0.0")
+    compile('com.google.guava:guava:18.0')
 
-	compile('org.apache.httpcomponents:httpasyncclient')
-	compile('commons-codec:commons-codec:1.10')
-	
-	compile("org.webjars:bootstrap:3.2.0")
+    compile("com.fasterxml.jackson.core:jackson-core")
+    compile('com.fasterxml.jackson.core:jackson-annotations')
+
+    compile('org.apache.httpcomponents:httpasyncclient')
+    compile('commons-codec:commons-codec:1.10')
+
+    compile("org.webjars:bootstrap:3.2.0")
     compile("org.webjars:jquery:2.1.1")
     compile 'org.webjars.bower:angularjs:1.4.8'
     compile 'org.apache.commons:commons-lang3:3.4'
-    
-    
-	providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
-	
-	testCompile 'org.springframework.boot:spring-boot-starter-test'
-	testCompile "info.cukes:cucumber-java:1.2.4","info.cukes:cucumber-junit:1.2.4","info.cukes:cucumber-spring:1.2.4"
 
-	testCompile 'org.seleniumhq.selenium:selenium-java:2.48.2'
-	
-	// so we can generate self signed certs
-	testCompile 'org.bouncycastle:bcpkix-jdk15on:1.53'
-	
-	//compile('org.flywaydb:flyway-core')
-	testCompile("com.h2database:h2:1.4.188")
-	
-	
+
+    providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
+
+    testCompile 'org.springframework.boot:spring-boot-starter-test'
+    testCompile "info.cukes:cucumber-java:1.2.4","info.cukes:cucumber-junit:1.2.4","info.cukes:cucumber-spring:1.2.4"
+
+    testCompile 'org.seleniumhq.selenium:selenium-java:2.48.2'
+
+    // so we can generate self signed certs
+    testCompile 'org.bouncycastle:bcpkix-jdk15on:1.53'
+
+    //compile('org.flywaydb:flyway-core')
+    testCompile("com.h2database:h2:1.4.188")
+
+
 }
 
 
 eclipse {
-	classpath {
-		containers.remove('org.eclipse.jdt.launching.JRE_CONTAINER')
-		containers 'org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7'
-	}
+    classpath {
+        containers.remove('org.eclipse.jdt.launching.JRE_CONTAINER')
+        containers 'org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7'
+    }
 }
 
 eclipseProject {
-  doLast {
-    // https://discuss.gradle.org/t/how-to-write-properties-to-3rd-party-eclipse-settings-files/6499/2
+    doLast {
+        // https://discuss.gradle.org/t/how-to-write-properties-to-3rd-party-eclipse-settings-files/6499/2
 
-    def props = new Properties()
-    file(".settings/org.eclipse.jdt.core.prefs").withInputStream {
-      stream -> props.load(stream)
+        def props = new Properties()
+        file(".settings/org.eclipse.jdt.core.prefs").withInputStream { stream ->
+            props.load(stream)
+        }
+        props.setProperty("org.eclipse.jdt.core.compiler.codegen.methodParameters", "generate")
+        file(".settings/org.eclipse.jdt.core.prefs").withOutputStream { stream ->
+            props.store(stream, null)
+        }
     }
-    props.setProperty("org.eclipse.jdt.core.compiler.codegen.methodParameters", "generate")
-    file(".settings/org.eclipse.jdt.core.prefs").withOutputStream {
-      stream -> props.store(stream, null)
-    }
-  }
 }
 
 task wrapper(type: Wrapper) { gradleVersion = '2.9' }
@@ -148,14 +156,10 @@ task sourcesJar(type: Jar) {
 
 
 
-artifacts {
-    archives javadocJar, sourcesJar
-    // it would be nice to publish test reports and code analysis reports as well
+artifacts { archives javadocJar, sourcesJar // it would be nice to publish test reports and code analysis reports as well
 }
 
-signing {
-    sign configurations.archives
-}
+signing { sign configurations.archives }
 
 task getNextVersion << {
     // get https://oss.sonatype.org/service/local/artifact/maven/redirect?g=au.com.mountain-pass&a=hyperstate&v=LATEST&r=public to
@@ -173,64 +177,67 @@ task getNextVersion << {
     }
     else {
         // TODO
-        location = conn.getHeaderField("Location");
-        System.out.println("location : " + location);
-        project.version = 2
+        String location = conn.getHeaderField("Location")
+        logger.debug("latest library location : " + location)
+        String currentVersion = location.replaceAll(~/.*-(.*?)\.jar/, '$1')
+        logger.debug("currentVersion : " + currentVersion)
+            
+        project.version = Integer.parseInt(currentVersion) + 1
+        logger.debug("nextVersion : " + project.version)
+        
     }
-    System.out.println("version : " + project.version);
+    logger.info("version : " + project.version)
 }
 
 uploadArchives.dependsOn getNextVersion
 
-task uploadSnapshotArchives(dependsOn: getNextVersion) << {
-    project.version = "${project.version}-SNAPSHOT"
-}
+task uploadSnapshotArchives(dependsOn: getNextVersion) << { project.version = "${project.version}-SNAPSHOT" }
 
 uploadSnapshotArchives.finalizedBy uploadArchives
 
 uploadArchives {
-  repositories {
-    mavenDeployer {
-      beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+    repositories {
+        mavenDeployer {
+            beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
 
-      repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2") {
-        authentication(userName: ossrhUsername, password: ossrhPassword)
-      }
+            repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2") {
+                authentication(userName: ossrhUsername, password: ossrhPassword)
+            }
 
-      snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots") {
-        authentication(userName: ossrhUsername, password: ossrhPassword)
-      }
+            snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots") {
+                authentication(userName: ossrhUsername, password: ossrhPassword)
+            }
 
-      pom.project {
-        name 'Hyperstate'
-        packaging 'jar'
-        // optionally artifactId can be defined here 
-        description 'A Hypermedia as the Engine of Application State (HATEOAS) library'
-        url 'https://github.com/mountain-pass/hyperstate'
+            pom.project {
+                name 'Hyperstate'
+                packaging 'jar'
+                // optionally artifactId can be defined here
+                description 'A Hypermedia as the Engine of Application State (HATEOAS) library'
+                url 'https://github.com/mountain-pass/hyperstate'
 
-        scm {
-          connection 'scm:git:https://github.com/mountain-pass/hyperstate'
-          developerConnection 'scm:git:https://github.com/mountain-pass/hyperstate'
-          url 'https://github.com/mountain-pass/hyperstate'
+                scm {
+                    connection 'scm:git:https://github.com/mountain-pass/hyperstate'
+                    developerConnection 'scm:git:https://github.com/mountain-pass/hyperstate'
+                    url 'https://github.com/mountain-pass/hyperstate'
+                }
+
+                licenses {
+                    license {
+                        name 'The Apache License, Version 2.0'
+                        url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                    }
+                }
+
+                developers {
+                    developer {
+                        id 'tompahoward'
+                        name 'Tom Howard'
+                        email 'tom@windyroad.com.au'
+                    }
+                }
+            }
         }
-
-        licenses {
-          license {
-            name 'The Apache License, Version 2.0'
-            url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-          }
-        }
-
-        developers {
-          developer {
-            id 'tompahoward'
-            name 'Tom Howard'
-            email 'tom@windyroad.com.au'
-          }
-        }
-      }
     }
-  }
 }
 
 test {
@@ -267,6 +274,75 @@ task uiIntegrationTest(type: Test, dependsOn : integrationTest) {
 test.dependsOn {
     tasks.findAll { task -> task.name.endsWith('Test') }
 }
+
+jacoco { toolVersion = "0.7.4.201502262128" }
+
+jacocoTestReport {
+    reports {
+        xml.enabled true
+        csv.enabled false
+        html.enabled true
+    }
+
+    doLast {
+        def report = file("${jacoco.reportsDir}/test/jacocoTestReport.xml")
+        logger.lifecycle("Checking coverage results: ${report}")
+
+        def parser = new XmlParser()
+        parser.setFeature("http://apache.org/xml/features/nonvalidating/load-external-dtd", false);
+        parser.setFeature("http://apache.org/xml/features/disallow-doctype-decl", false)
+        def results = parser.parse(report)
+
+        def percentage = {
+            if( it == null ) {
+                return 100
+            }
+            def covered = it.'@covered' as Double
+            def missed = it.'@missed' as Double
+            ((covered / (covered + missed)) * 100).round(2)
+        }
+
+        def counters = results.counter
+        def metrics = [:]
+        metrics << [
+            'instruction': percentage(counters.find { it.'@type'.equals('INSTRUCTION') }),
+            'branch'     : percentage(counters.find { it.'@type'.equals('BRANCH') }),
+            'line'       : percentage(counters.find { it.'@type'.equals('LINE') }),
+            'complexity' : percentage(counters.find { it.'@type'.equals('COMPLEXITY') }),
+            'method'     : percentage(counters.find { it.'@type'.equals('METHOD') }),
+            'class'      : percentage(counters.find { it.'@type'.equals('CLASS') })
+        ]
+
+
+        def failures = []
+        def success = []
+        metrics.each {
+            def limit = limits[it.key]
+            if (it.value < limit) {
+                failures.add("- ${it.key} coverage rate is: ${it.value}%, minimum is ${limit}%")
+            }
+            else {
+                success.add("- ${it.key} coverage rate is: ${it.value}%, minimum is ${limit}%")
+            }
+        }
+
+        logger.quiet("------------------ Code Coverage Passes -----------------------")
+        success.each { logger.quiet(it) }
+        logger.quiet("---------------------------------------------------------------")
+        if (failures) {
+            logger.quiet("------------------ Code Coverage Failed -----------------------")
+            failures.each { logger.quiet(it) }
+            logger.quiet("---------------------------------------------------------------")
+            throw new GradleException("Code coverage failed")
+        } else{
+            logger.quiet("Passed Code Coverage Checks")
+        }
+    }
+}
+
+test { jacoco { append = false } }
+
+check.dependsOn jacocoTestReport
 
 
 gradle.taskGraph.afterTask { Task task, TaskState state ->
