--- a/build.gradle
+++ b/build.gradle
@@ -345,6 +345,10 @@ test { jacoco { append = false } }
 
 check.dependsOn jacocoTestReport
 
+bootRepackage {
+    enabled = false
+}
+
 
 gradle.taskGraph.afterTask { Task task, TaskState state ->
     if (state.failure) {
