--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,8 @@
 buildscript {
-    ext { springBootVersion = '1.3.2.RELEASE' }
+    ext { 
+        springBootVersion = '1.3.2.RELEASE'
+        foo = { test = "1"} 
+    }
     repositories {
         jcenter()
         mavenCentral()
@@ -15,12 +18,12 @@ buildscript {
 plugins { id "io.spring.dependency-management" version "0.5.4.RELEASE" }
 
 ext{
-    ossrhUsername = hasProperty('ossrhUsername') ? ossrhUsername : System.getenv('OSSRH_JIRA_USERNAME')
-    ossrhPassword = hasProperty('ossrhPassword') ? ossrhPassword : System.getenv('OSSRH_JIRA_PASSWORD')
-    def signing = {}
-    signing.keyId = hasProperty('signing.keyId') ? signing.keyId : System.getenv('GPG_KEY_ID')
-    signing.password = hasProperty('signing.password') ? signing.keyId : System.getenv('GPG_PASSPHRASE')
-    
+    if (!hasProperty('ossrhUsername')) {
+        ossrhUsername = ''
+    }
+    if (!hasProperty('ossrhPassword')) {
+        ossrhPassword = ''
+    }
 
     // TODO: Increase these, but needs to be set per subproject
     limits = [
@@ -160,7 +163,10 @@ task sourcesJar(type: Jar) {
 artifacts { archives javadocJar, sourcesJar // it would be nice to publish test reports and code analysis reports as well
 }
 
-signing { sign configurations.archives }
+signing { 
+    required { gradle.taskGraph.hasTask("uploadArchives") }
+    sign configurations.archives
+}
 
 task getNextVersion << {
     // get https://oss.sonatype.org/service/local/artifact/maven/redirect?g=au.com.mountain-pass&a=hyperstate&v=LATEST&r=public to
