--- a/build.gradle
+++ b/build.gradle
@@ -282,6 +282,11 @@ test.dependsOn {
     tasks.findAll { task -> task.name.endsWith('Test') }
 }
 
+tasks.withType(Test) {
+    scanForTestClasses = false
+    include "**/*Test.class" // whatever Ant pattern matches your test class files
+}
+
 jacoco { toolVersion = "0.7.4.201502262128" }
 
 jacocoTestReport {
