--- a/build.gradle
+++ b/build.gradle
@@ -160,7 +160,126 @@ task sourcesJar(type: Jar) {
 
 
 
-artifacts { archives javadocJar, sourcesJar // it would be nice to publish test reports and code analysis reports as well
+test {
+}
+
+
+task unitTest(type: Test) {
+    testClassesDir = sourceSets.test.output.classesDir
+    classpath = sourceSets.test.runtimeClasspath
+    ext.outputDir = "${buildDir}/test-results-ut"
+    outputs.dir file(outputDir)
+    systemProperty 'cucumber.options',  "--plugin json:${outputDir}/cucumber.json --plugin html:${outputDir}/html --plugin junit:${outputDir}/TEST-cucumber.xml"
+}
+
+
+task integrationTest(type: Test, dependsOn : unitTest) {
+    testClassesDir = sourceSets.test.output.classesDir
+    classpath = sourceSets.test.runtimeClasspath
+    ext.outputDir = "${buildDir}/test-results-it"
+    outputs.dir file(outputDir)
+    systemProperty 'cucumber.options',  "--plugin json:${outputDir}/cucumber.json --plugin html:${outputDir}/html --plugin junit:${outputDir}/TEST-cucumber.xml"
+    systemProperty 'spring.profiles.active', 'integration'
+}
+
+task uiIntegrationTest(type: Test, dependsOn : integrationTest) {
+    testClassesDir = sourceSets.test.output.classesDir
+    classpath = sourceSets.test.runtimeClasspath
+    ext.outputDir = "${buildDir}/test-results-ui"
+    outputs.dir file(outputDir)
+    systemProperty 'cucumber.options',  "--plugin json:${outputDir}/cucumber.json --plugin html:${outputDir}/html --plugin junit:${outputDir}/TEST-cucumber.xml"
+    systemProperty 'spring.profiles.active', 'ui-integration'
+}
+
+test.dependsOn {
+    tasks.findAll { task -> task.name.endsWith('Test') }
+}
+
+tasks.withType(Test) {
+    scanForTestClasses = false
+    include "**/*Tests.class" // whatever Ant pattern matches your test class files
+}
+
+jacoco { toolVersion = "0.7.4.201502262128" }
+
+jacocoTestReport {
+    reports {
+        xml.enabled true
+        csv.enabled false
+        html.enabled true
+    }
+
+    doLast {
+        def report = file("${jacoco.reportsDir}/test/jacocoTestReport.xml")
+        logger.lifecycle("Checking coverage results: ${report}")
+
+        def parser = new XmlParser()
+        parser.setFeature("http://apache.org/xml/features/nonvalidating/load-external-dtd", false);
+        parser.setFeature("http://apache.org/xml/features/disallow-doctype-decl", false)
+        def results = parser.parse(report)
+
+        def percentage = {
+            if( it == null ) {
+                return 100
+            }
+            def covered = it.'@covered' as Double
+            def missed = it.'@missed' as Double
+            ((covered / (covered + missed)) * 100).round(2)
+        }
+
+        def counters = results.counter
+        def metrics = [:]
+        metrics << [
+            'instruction': percentage(counters.find { it.'@type'.equals('INSTRUCTION') }),
+            'branch'     : percentage(counters.find { it.'@type'.equals('BRANCH') }),
+            'line'       : percentage(counters.find { it.'@type'.equals('LINE') }),
+            'complexity' : percentage(counters.find { it.'@type'.equals('COMPLEXITY') }),
+            'method'     : percentage(counters.find { it.'@type'.equals('METHOD') }),
+            'class'      : percentage(counters.find { it.'@type'.equals('CLASS') })
+        ]
+
+
+        def failures = []
+        def success = []
+        metrics.each {
+            def limit = limits[it.key]
+            if (it.value < limit) {
+                failures.add("- ${it.key} coverage rate is: ${it.value}%, minimum is ${limit}%")
+            }
+            else {
+                success.add("- ${it.key} coverage rate is: ${it.value}%, minimum is ${limit}%")
+            }
+        }
+
+        logger.quiet("------------------ Code Coverage Passes -----------------------")
+        success.each { logger.quiet(it) }
+        logger.quiet("---------------------------------------------------------------")
+        if (failures) {
+            logger.quiet("------------------ Code Coverage Failed -----------------------")
+            failures.each { logger.quiet(it) }
+            logger.quiet("---------------------------------------------------------------")
+            throw new GradleException("Code coverage failed")
+        } else{
+            logger.quiet("Passed Code Coverage Checks")
+        }
+    }
+}
+
+test { jacoco { append = false } }
+
+check.dependsOn jacocoTestReport
+
+task testReportsJar(type: Jar) {
+    classifier = 'testReports'
+    from test, jacocoTestReport
+}
+
+def someTestReport = file("${buildDir}/test-results-ut/TEST-cucumber.xml")
+
+
+
+artifacts { 
+    archives javadocJar, sourcesJar, testReportsJar
 }
 
 signing { 
@@ -246,115 +365,6 @@ uploadArchives {
         }
     }
 }
-
-test {
-}
-
-
-task unitTest(type: Test) {
-    testClassesDir = sourceSets.test.output.classesDir
-    classpath = sourceSets.test.runtimeClasspath
-    ext.outputDir = "${buildDir}/test-results-ut"
-    outputs.dir file(outputDir)
-    systemProperty 'cucumber.options',  "--plugin json:${outputDir}/cucumber.json --plugin html:${outputDir}/html --plugin junit:${outputDir}/TEST-cucumber.xml"
-}
-
-
-task integrationTest(type: Test, dependsOn : unitTest) {
-    testClassesDir = sourceSets.test.output.classesDir
-    classpath = sourceSets.test.runtimeClasspath
-    ext.outputDir = "${buildDir}/test-results-it"
-    outputs.dir file(outputDir)
-    systemProperty 'cucumber.options',  "--plugin json:${outputDir}/cucumber.json --plugin html:${outputDir}/html --plugin junit:${outputDir}/TEST-cucumber.xml"
-    systemProperty 'spring.profiles.active', 'integration'
-}
-
-task uiIntegrationTest(type: Test, dependsOn : integrationTest) {
-    testClassesDir = sourceSets.test.output.classesDir
-    classpath = sourceSets.test.runtimeClasspath
-    ext.outputDir = "${buildDir}/test-results-ui"
-    outputs.dir file(outputDir)
-    systemProperty 'cucumber.options',  "--plugin json:${outputDir}/cucumber.json --plugin html:${outputDir}/html --plugin junit:${outputDir}/TEST-cucumber.xml"
-    systemProperty 'spring.profiles.active', 'ui-integration'
-}
-
-test.dependsOn {
-    tasks.findAll { task -> task.name.endsWith('Test') }
-}
-
-tasks.withType(Test) {
-    scanForTestClasses = false
-    include "**/*Test.class" // whatever Ant pattern matches your test class files
-}
-
-jacoco { toolVersion = "0.7.4.201502262128" }
-
-jacocoTestReport {
-    reports {
-        xml.enabled true
-        csv.enabled false
-        html.enabled true
-    }
-
-    doLast {
-        def report = file("${jacoco.reportsDir}/test/jacocoTestReport.xml")
-        logger.lifecycle("Checking coverage results: ${report}")
-
-        def parser = new XmlParser()
-        parser.setFeature("http://apache.org/xml/features/nonvalidating/load-external-dtd", false);
-        parser.setFeature("http://apache.org/xml/features/disallow-doctype-decl", false)
-        def results = parser.parse(report)
-
-        def percentage = {
-            if( it == null ) {
-                return 100
-            }
-            def covered = it.'@covered' as Double
-            def missed = it.'@missed' as Double
-            ((covered / (covered + missed)) * 100).round(2)
-        }
-
-        def counters = results.counter
-        def metrics = [:]
-        metrics << [
-            'instruction': percentage(counters.find { it.'@type'.equals('INSTRUCTION') }),
-            'branch'     : percentage(counters.find { it.'@type'.equals('BRANCH') }),
-            'line'       : percentage(counters.find { it.'@type'.equals('LINE') }),
-            'complexity' : percentage(counters.find { it.'@type'.equals('COMPLEXITY') }),
-            'method'     : percentage(counters.find { it.'@type'.equals('METHOD') }),
-            'class'      : percentage(counters.find { it.'@type'.equals('CLASS') })
-        ]
-
-
-        def failures = []
-        def success = []
-        metrics.each {
-            def limit = limits[it.key]
-            if (it.value < limit) {
-                failures.add("- ${it.key} coverage rate is: ${it.value}%, minimum is ${limit}%")
-            }
-            else {
-                success.add("- ${it.key} coverage rate is: ${it.value}%, minimum is ${limit}%")
-            }
-        }
-
-        logger.quiet("------------------ Code Coverage Passes -----------------------")
-        success.each { logger.quiet(it) }
-        logger.quiet("---------------------------------------------------------------")
-        if (failures) {
-            logger.quiet("------------------ Code Coverage Failed -----------------------")
-            failures.each { logger.quiet(it) }
-            logger.quiet("---------------------------------------------------------------")
-            throw new GradleException("Code coverage failed")
-        } else{
-            logger.quiet("Passed Code Coverage Checks")
-        }
-    }
-}
-
-test { jacoco { append = false } }
-
-check.dependsOn jacocoTestReport
 
 bootRepackage {
     enabled = false
