--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,11 @@ before_install:
  
 install: ./gradlew --daemon assemble --info
 
+before_script:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3 # give xvfb some time to start
+
 script: ./gradlew --daemon check --info
 
 cache:
