--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_install:
   - sleep 3 # give xvfb some time to start
 
 install:
-  - ./gradlew --daemon assemble --info
+  - ./gradlew --daemon --info compileJava compileTestJava
 
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
