--- a/.travis.yml
+++ b/.travis.yml
@@ -21,10 +21,11 @@ cache:
     - $HOME/.gradle/caches/
     - $HOME/.gradle/wrapper/
 
+before_script:
+  - chmod +x ./cd/init-display.sh
+  - ./cd/init-display.sh 
+
 script:
-  - export DISPLAY=:99.0
-  - "sh -e /etc/init.d/xvfb start"   
-  - sleep 3 # give xvfb some time to start
   - ./gradlew --daemon check --info
 
       
