--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,16 @@ after_success:
 - chmod +x ./cd/before-deploy.sh
 - chmod +x ./cd/deploy.sh
 - "./cd/before-deploy.sh"
-- ./gradlew --daemon jar javadocJar qaReportsJar sourcesJar
+- ./gradlew --daemon jar
+- ./gradlew --daemon jar
+- ./gradlew --daemon javadoc
+- ./gradlew --daemon javadoc
+- ./gradlew --daemon javadocJar
+- ./gradlew --daemon javadocJar
+- ./gradlew --daemon qaReportsJar
+- ./gradlew --daemon qaReportsJar
+- ./gradlew --daemon sourcesJar
+- ./gradlew --daemon sourcesJar
 - jdk_switcher use oraclejdk7
 - "./cd/deploy.sh"
 
