--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ jdk:
 - oraclejdk8
 
 before_install:
+- sudo apt-get update -qq
+- sudo apt-get install oracle-java8-installer
 - chmod +x ./gradlew
 - export DISPLAY=:99.0
 - sh -e /etc/init.d/xvfb start
