added call to grade dependencies before test

--- a/circle.yml
+++ b/circle.yml
@@ -7,6 +7,7 @@ machine:
 dependencies: 
   override:
     - ./gradlew wrapper
+    - ./gradlew dependencies
   cache_directories:
     - "~/.gradle/caches/"
     - "~/.gradle/wrapper/"
