telling circle ci where the qa results are

--- a/circle.yml
+++ b/circle.yml
@@ -25,3 +25,8 @@ deployment:
     branch: master
     commands:
       - ./cd/deploy.sh
+
+      
+general:
+  artifacts:
+    - "build/test-results" 
