--- a/build.gradle
+++ b/build.gradle
@@ -399,6 +399,8 @@ uploadArchives {
 nexusStaging {
     username = project.hasProperty('ossrhUsername') ? project.getProperty('ossrhUsername') : ''
     password = project.hasProperty('ossrhPassword') ? project.getProperty('ossrhPassword') : ''
+    numberOfRetries = 10
+    delayBetweenRetriesInMillis = 5000
 }
 
 bootRepackage {
