updated angualrjs library

--- a/build.gradle
+++ b/build.gradle
@@ -103,7 +103,7 @@ dependencies {
 
     compile("org.webjars:bootstrap:3.2.0")
     compile("org.webjars:jquery:2.1.1")
-    compile 'org.webjars.bower:angularjs:1.4.8'
+    compile 'org.webjars.bower:angularjs:1.5.7' // when updating, don't forget to update index.html
     compile 'org.apache.commons:commons-lang3:3.4'
 
 
