--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,7 @@ apply plugin: 'signing'
 apply plugin: 'io.codearte.nexus-staging'
 apply plugin: 'jacoco'
 apply plugin: 'findbugs'
+apply plugin: 'checkstyle'
 //apply plugin: 'pmd'
 //apply plugin: 'jdepend'
 apply plugin: 'org.standardout.versioneye'
@@ -456,6 +457,33 @@ task (codacyLocs) << {
         println jarName
     }
 }
+
+ 
+checkstyle {
+    ignoreFailures=true
+    configFile=file("${project.projectDir}/config/checkstyle/checkstyle.xml")
+    reportsDir=file("$qaReportsDir/checkstyle")
+}
+
+tasks.withType(Checkstyle) {
+    reports {
+        xml.enabled true
+        html.enabled true
+        html.stylesheet resources.text.fromFile("${project.projectDir}/config/checkstyle/checkstyle.xsl")
+    }
+}
+
+/*
+task checkstyleReport(dependsOn : checkstyle) {
+    if (file("$qaReportsDir/checkstyle/main.xml").exists()) {
+        ant.xslt(in: "$qaReportsDir/checkstyle/main.xml",
+        style:"${project.projectDir}/config/checkstyle/checkstyle.xsl",
+        out:"$qaReportsDir/checkstyle/main.html")
+    }
+}
+
+check.dependsOn checkstyleReport
+*/     
 
 gradle.taskGraph.afterTask { Task task, TaskState state ->
     if (state.failure) {
