--- a/build.gradle
+++ b/build.gradle
@@ -16,12 +16,12 @@ buildscript {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
         classpath "io.codearte.gradle.nexus:gradle-nexus-staging-plugin:0.5.3"
         classpath 'org.standardout:gradle-versioneye-plugin:1.4.0'
-        classpath 'org.ajoberstar:gradle-git:1.5.1-rc.2'
-        
     }
 }
 
-plugins { id "io.spring.dependency-management" version "0.5.7.RELEASE" }
+plugins { 
+    id "io.spring.dependency-management" version "0.5.7.RELEASE"
+}
 
 
 ext{
@@ -491,22 +491,6 @@ jdepend {
     reportsDir=file("$qaReportsDir/jdepend")
     
 } 
-
-import org.ajoberstar.gradle.git.tasks.GitTag
-import org.ajoberstar.gradle.git.tasks.GitPush
-
-task createTag(type: GitTag) {
-   repoPath = rootDir
-   tagName = "${project.version.toString()}"
-   message = "Application release ${project.version.toString()}"
-}
-
-task pushTag(type: GitPush, dependsOn: createTag) {
-   namesOrSpecs = ["${project.version.toString()}"]
-}
-
-uploadArchives.finalizedBy pushTag
-
 
 
 gradle.taskGraph.afterTask { Task task, TaskState state ->
